# llama-control-center

./: .gitignore  CHANGELOG.md  LICENSE  PORTABLE_CORE.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  requirements.txt  start-lcc.py  stop-lcc.py
lcc_api/: __init__.py  __main__.py  app.py
lcc_api/static/: app.js  index.html  styles.css
lcc_core/: __init__.py  backends.py  benchmark.py  cli.py  config.py  draft_models.py  estimates.py  fit.py  hardware.py  hf_cli.py  hf_metadata.py  inventory.py  launch_scripts.py  llama_args.py  manifest.py  models.py  paths.py  portability.py  profile_resolver.py  runtime_updates.py  sampling.py  schema.py  server_manager.py  smart_tune.py
tests/: test_launch_scripts.py  test_lcc_api.py  test_lcc_core.py  test_stop_lcc.py
