[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-control-center"
version = "0.9.0"
description = "A control center for llama.cpp and Hugging Face models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gguf",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lcc_api*", "lcc_core*"]
